<resources>
    <string name="app_name">How Computer Works</string>
    <string name="start">Start</string>
    <string name="hi_n_welcome_to_nhow_computer_works">Hi, Welcome to How Computer Works</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="computer_title">What is Computer?</string>
    <string name="computer_picture">Computer picture</string>
    <string name="author_name">by Tanvir Mahin CSE-18</string>
    <string name="proceed">Proceed</string>
    <string name="processor_img">processor</string>
    <string name="processor">What is Processor?</string>
    <string name="ram">What is Ram?</string>
    <string name="dvd">What is DVD Room?</string>
    <string name="hdd">What is Hard Disc?</string>
    <string name="phdd">What is Portable Hard Disc?</string>
    <string name="fan">What is Cooling Fan?</string>
    <string name="gpu">What is Graphics Card?</string>
    <string name="mainboard">What is Motherboard?</string>
    <string name="power">What is Power Supply?</string>
    <string name="sound">What is Sound Card?</string>
    <string name="mouse">What is Mouse?</string>
    <string name="keyboard">What is Keyboard?</string>
    <string name="monitor">What is Monitor?</string>
    <string name="printer">What is Printer?</string>
    <string name="soundbox">What is Sound Box?</string>
    <string name="touchpad">What is Touchpad?</string>
    <string name="ssd">What is SSD?</string>
    <string name="printer_description">In computing, a printer is a peripheral device which makes a persistent representation of graphics or text, usually on paper. While most output is human-readable, bar code printers are an example of an expanded use for printers. The first computer printer designed was a mechanically driven apparatus by Charles Babbage for his difference engine in the 19th century; however, his mechanical printer design was not built until 2000. The first electronic printer was the EP-101, invented by Japanese company Epson and released in 1968. The first commercial printers generally used mechanisms from electric typewriters and Teletype machines. The demand for higher speed led to the development of new systems specifically for computer use. In the 1980s there were daisy wheel systems similar to typewriters, line printers that produced similar output but at much higher speed, and dot matrix systems that could mix text and graphics but produced relatively low-quality output. The plotter was used for those requiring high quality line art like blueprints.</string>
    <string name="monitor_description">A computer monitor is an output device that displays information in pictorial form. A monitor usually comprises the display device, circuitry, casing, and power supply. The display device in modern monitors is typically a thin film transistor liquid crystal display (TFT-LCD) with LED backlighting having replaced cold-cathode fluorescent lamp (CCFL) backlighting. Older monitors used a cathode ray tube (CRT). Monitors are connected to the computer via VGA, Digital Visual Interface (DVI), HDMI, DisplayPort, Thunderbolt, low-voltage differential signaling (LVDS) or other proprietary connectors and signals. Originally, computer monitors were used for data processing while television sets were used for entertainment. From the 1980s onwards, computers (and their monitors) have been used for both data processing and entertainment, while televisions have implemented some computer functionality. The common aspect ratio of televisions, and computer monitors, has changed from 4:3 to 16:10, to 16:9. Modern computer monitors are easily interchangeable with conventional television sets. However, as computer monitors do not necessarily include integrated speakers, it may not be possible to use a computer monitor without external components.</string>
    <string name="keyboard_description">A computer keyboard is an input device that allows a person to enter letters, numbers, and other symbols (these are called characters in a keyboard) into a computer. It is one of the most used input devices for computers. Using a keyboard to enter lots of data is called typing. A keyboard contains many mechanical switches or push-buttons called "keys". When one of these are pushed, an electrical circuit is closed, and the keyboard sends a signal to the computer that tells it what letter, number or symbol it would like to be shown on the screen. The computer\'s CPU then shows the character on the screen, usually at the place where the cursor is. Besides entering characters, computer keyboards also have keys that change the symbol (such as shift or caps lock) or give the computer special commands (such as the arrow keys, CTRL and ALT). Different computer operating systems use different special keys, or use them differently. Special commands can also be activated through a combination of keys (such as Ctrl + V on Windows to paste copied content). A keyboard can be joined to a computer using a wire, but can also be wireless (like those that use Bluetooth). Most 21st century keyboards that use wires connect to a USB port on the computer, but older ones use a less versatile DIN connector port.</string>
    <string name="mouse_description">A computer mouse (plural mice or mouses) is a hand-held pointing device that detects two-dimensional motion relative to a surface. This motion is typically translated into the motion of a pointer on a display, which allows a smooth control of the graphical user interface of a computer. The first public demonstration of a mouse controlling a computer system was in 1968. Mice originally used a ball rolling on a surface to detect motion, but modern mice often have optical sensors that have no moving parts. Originally wired to a computer, many modern mice are cordless, relying on short-range radio communication with the connected system. In addition to moving a cursor, computer mice have one or more buttons to allow operations such as selection of a menu item on a display. Mice often also feature other elements, such as touch surfaces and scroll wheels, which enable additional control and dimensional input.</string>
    <string name="phdd_description">An external drive is just a hard drive (HDD) or solid state drive (SSD) that is connected to a computer on the outside rather than on the inside. Some external drives draw power over their data cable, which of course comes from the computer itself, while others may require an AC wall connection to derive power on their own.External hard drives are portable, easy to use, and can provide a large amount of storage whenever you need it. You can store the actual device any place you like, and carry a large number of files with you wherever you go. Another advantage of owning an external drive is that you can move them from computer to computer, making them great for sharing large files. Because of their usually large storage capacities (often in the terabytes), external hard drives are often used to store backed up files. It\'s common to use a backup program to back up things like a music, video, or picture collection to an external drive for safe keeping, separate from the originals in case they\'re accidentally changed or deleted. Even if not used for backup purposes, external hard drives provide an easy way to expand your existing storage without having to open up your computer, which is especially difficult if using a laptop. If your computer is always giving you low disk space warnings or is sluggish because it\'s working hard to keep things running on the little bits of free space it has left, it\'s probably time to get an external hard drive so that you can copy some of your files to it and free up storage on your primary hard drive. External hard drive can also be used to provide additional storage to an entire network (though internal hard drives are usually more common in these scenarios). These kinds of network storage devices can be accessed by numerous users at once and often serve as a way for users to share files within a network to avoid emailing or uploading the data online.</string>
    <string name="fan_description">While in earlier personal computers it was possible to cool most components using natural convection (passive cooling), many modern components require more effective active cooling. To cool these components, fans are used to move heated air away from the components and draw cooler air over them. Fans attached to components are usually used in combination with a heat sink to increase the area of heated surface in contact with the air, thereby improving the efficiency of cooling. Fan control is not always an automatic process. A computer\'s BIOS (basic input/output system) can control the speed of the built-in fan system for the computer. A user can even supplement this function with additional cooling components or connect a manual fan controller with knobs that set fans to different speeds.[</string>
    <string name="processor_description">A processor, or \"microprocessor,\" is a small chip that resides in computers and other electronic devices. Its basic job is to receive input and provide the appropriate output. While this may seem like a simple task, modern processors can handle trillions of calculations per second. The central processor of a computer is also known as the CPU, or \"central processing unit.\" This processor handles all the basic system instructions, such as processing mouse and keyboard input and running applications. Most desktop computers contain a CPU developed by either Intel or AMD, both of which use the x86 processor architecture. Mobile devices, such as laptops and tablets may use Intel and AMD CPUs, but can also use specific mobile processors developed by companies like ARM or Apple. Modern CPUs often include multiple processing cores, which work together to process instructions. While these \"cores\" are contained in one physical unit, they are actually individual processors. In fact, if you view your computer\'s performance with a system monitoring utility like Windows Task Manager (Windows) or Activity Monitor (Mac OS X), you will see separate graphs for each processor. Processors that include two cores are called dual-core processors, while those with four cores are called quad-core processors. Some high-end workstations contain multiple CPUs with multiple cores, allowing a single machine to have eight, twelve, or even more processing cores. Besides the central processing unit, most desktop and laptop computers also include a GPU. This processor is specifically designed for rendering graphics that are output on a monitor. Desktop computers often have a video card that contains the GPU, while mobile devices usually contain a graphics chip that is integrated into the motherboard. By using separate processors for system and graphics processing, computers are able to handle graphic-intensive applications more efficiently.</string>
    <string name="input">Input</string>
    <string name="storage">Storage</string>
    <string name="process">Process</string>
    <string name="output">Output</string>
    <string name="keyboard_text">Keyboard</string>
    <string name="mouse_text">Mouse</string>
    <string name="dvd_room_text">DVD Room</string>
    <string name="touch_pad_text">Touch Pad</string>
    <string name="back">Back</string>
    <string name="portable_harddisc_image">Portable Hard Disc</string>
    <string name="there_are_4_basic_parts_of_computing">There are 4 basic parts of Computing</string>
    <string name="mainboard_text">Mother\nBoard</string>
    <string name="graphics_ncard">Graphics\nCard</string>
    <string name="power_supply">Power\nSupply</string>
    <string name="fan_title">Cooling\nFan</string>
    <string name="other_importent_component_of_computer">Other Importent Component\nof Computer</string>
</resources>