<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    tools:context=".Input">

    <Button
        android:id="@+id/button13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#1A94C9"
        android:onClick="back"
        android:text="@string/back"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="#1A94C9"
            android:onClick="keyboard"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="60"
            android:text="@string/keyboard_text"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="#1A94C9"
            android:onClick="touchpad"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="60"
            android:text="@string/touch_pad_text"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="#1A94C9"
            android:onClick="mouce"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="60"
            android:text="@string/mouse_text"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="#1A94C9"
            android:onClick="dvd"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="60"
            android:text="@string/dvd_room_text"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>